# emoji_bot

./: Dockerfile  README.md  bot.py  pyproject.toml
.github/workflows/: docker-image.yml
emoji_bot/: bot.py
emoji_bot/secrets/: README.md
